Save and load the high score

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "jshint.lintHTML": true,
     "jshint.config": "",
     "cSpell.words": [
+        "highscore",
         "robo",
         "roborto",
         "trumble"
